--- a/css/main.css
+++ b/css/main.css
@@ -62,9 +62,12 @@ footer {
   header {
     background-color: #e3e3e3;
   }
-
+  .col-3{
+    width:50%;
+  }
   #column-1 {
     background-color:#41FA69;
+    width:100%;
   }
 
   #column-2 {
@@ -90,6 +93,7 @@ footer {
 
   #column-1 {
     background-color:#FA5541 ;
+    width:33.3%;
   }
 
   #column-2 {
@@ -103,5 +107,7 @@ footer {
   footer {
     background-color:#e3e3e3 ;
   }
-
+  .col-3{
+    width:33.3%;
+  }
 }
